--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,7 @@ button {
 /* ========START  HEADER CSS ==========*/
 .header {
     background-color: #371855;
+    padding-bottom: 193px;
 }
 
 .header .container {
@@ -372,7 +373,6 @@ button {
 
 .btn-outline {
     color: #F8F6FA;
-    border-color: currentColor;
     padding: 15px 37px 14px 46px;
     border: 1px solid rgba(235, 17, 170, 1);
 }
@@ -386,18 +386,21 @@ button {
     backdrop-filter: blur(4px);
     border-radius: 2px;
     margin-top: 63px;
+    padding: 30px;
 }
 
 .hero__counter-left {
     display: flex;
     flex-direction: column;
     flex-basis: 200px;
+    border-right: 1px solid rgba(248, 246, 250, 0.2);
 }
 
 .hero__counter-right {
     display: inline-flex;
     flex-direction: column;
     flex-basis: 207px;
+    padding-left: 38px;
 
 
 }
@@ -461,6 +464,53 @@ button {
 
 .hero-content-title {
     width: 432px;
-    height: 312;
     margin-left: 117px;
 }
+
+.hero__counter-right-blocks {
+    display: flex;
+    gap: 30px;
+}
+
+.hero__counter-right-blocks > div {
+    text-align: center;
+}
+
+.hero__right {
+    position: relative;
+    background: linear-gradient(89.96deg, #CB47A0 0.02%, #6947CB 49.47%, #00FF85 99.97%);
+    border-radius: 50%;
+    width: 500px;
+    height: 500px;
+    top: 23px;
+    left: 10px;
+}
+
+.hero__right-img {
+    width: 500px;
+    height: auto;
+    object-fit: cover;
+    position: absolute;
+    left: 50%;
+    top: 32px;
+    z-index: 1;
+    transform: translateX(-50%)
+}
+
+
+.hero__right-svg-one {
+    position: absolute;
+    width: 100%;
+    height: 960px;
+    left: 20%;
+    top: 0;
+}
+
+.header{
+    position: relative;
+    overflow: hidden;
+}
+
+
+
+
